/* eslint-disable jsdoc/require-jsdoc */
import type { Root } from 'mdast'
import type { VFile } from 'vfile'
import fs from 'node:fs/promises'
import { remark } from 'remark'
import remarkGfm from 'remark-gfm'
import { describe, expect, it } from 'vitest'
import type { MdatCleanOptions, Options } from '../src'
import remarkMdat, { mdatClean, mdatSplit } from '../src'
import testRules from './assets/test-rules'
import testRulesInvalid from './assets/test-rules-invalid'

async function expandStringToString(markdown: string, options: Options): Promise<string> {
	const result = await remark().use(remarkGfm).use(remarkMdat, options).process(markdown)
	return result.toString()
}

// Export for linter
export async function cleanString(markdown: string, options: MdatCleanOptions): Promise<string> {
	const result = await remark()
		.use(remarkGfm)
		.use(
			() =>
				// eslint-disable-next-line unicorn/consistent-function-scoping
				function (tree: Root, file: VFile) {
					mdatSplit(tree, file)
					mdatClean(tree, file, options)
				},
		)
		.process(markdown)
	return result.toString()
}

async function expandFileToString(file: string, options: Options): Promise<string> {
	const buffer = await fs.readFile(file)
	const result = await remark().use(remarkGfm).use(remarkMdat, options).process(buffer)
	return result.toString()
}

describe('comment expansion', () => {
	it('should expand comments', async () => {
		const expandedString = await expandFileToString('./test/assets/test-document.md', {
			rules: testRules,
		})
		expect(expandedString).toMatchSnapshot()
	})

	it('should be idempotent', async () => {
		const firstPass = await expandFileToString('./test/assets/test-document.md', {
			rules: testRules,
		})

		const secondPass = await expandStringToString(firstPass, {
			rules: testRules,
		})

		expect(firstPass).toEqual(secondPass)
	})

	it('should include the meta tag if asked', async () => {
		const expandedString = await expandFileToString('./test/assets/test-document.md', {
			addMetaComment: true,
			rules: testRules,
		})

		expect(expandedString).toMatchSnapshot()
	})

	it('should include a custom meta comment when provided as a string', async () => {
		const customMessage = 'This is a custom warning message.'
		const expandedString = await expandFileToString('./test/assets/test-document.md', {
			addMetaComment: customMessage,
			rules: testRules,
		})

		expect(expandedString).toContain(`<!--+ ${customMessage} +-->`)
		expect(expandedString).toMatchSnapshot()
	})

	it('should use custom meta comment with different identifier', async () => {
		const customMessage = 'Custom meta identifier test'
		const expandedString = await expandFileToString('./test/assets/test-document.md', {
			addMetaComment: customMessage,
			metaCommentIdentifier: '***',
			rules: testRules,
		})

		expect(expandedString).toContain(`<!--*** ${customMessage} ***-->`)
		expect(expandedString).toMatchSnapshot()
	})

	it('should not include meta comment when addMetaComment is false', async () => {
		const expandedString = await expandFileToString('./test/assets/test-document.md', {
			addMetaComment: false,
			rules: testRules,
		})

		expect(expandedString).not.toContain('<!--+')
		expect(expandedString).not.toContain('Warning: Content inside HTML comment blocks')
	})

	it('should throw an error if rule set is invalid', async () => {
		await expect(
			expandFileToString('./test/assets/test-document.md', {
				// @ts-expect-error intentionally invalid rules for runtime validation test
				rules: testRulesInvalid,
			}),
		).rejects.toThrow()
	})

	it('should expand keywords while ignoring code-style comments', async () => {
		const expandedString = await expandFileToString('./test/assets/test-document-comments.md', {
			rules: testRules,
		})
		expect(expandedString).toMatchSnapshot()
	})
})

describe('code-style comment handling', () => {
	it('should leave code-style comments untouched during expansion', async () => {
		const markdown = `<!-- // developer note -->\n<!-- # todo -->\n<!-- /* block */ -->\n<!-- keyword -->\n`
		const options: Options = {
			rules: { keyword: 'expanded' },
		}
		const result = await expandStringToString(markdown, options)
		expect(result).toContain('<!-- // developer note -->')
		expect(result).toContain('<!-- # todo -->')
		expect(result).toContain('<!-- /* block */ -->')
		expect(result).toContain('<!-- /keyword -->')
	})

	it('should not confuse closing tags with line comments', async () => {
		const markdown = `<!-- keyword -->\n`
		const options: Options = {
			rules: { keyword: 'content' },
		}
		const result = await expandStringToString(markdown, options)
		expect(result).toContain('<!-- /keyword -->')
	})
})

describe('keyword validation', () => {
	it('should reject keywords starting with /', async () => {
		await expect(
			expandStringToString('<!-- test -->', { rules: { '/bad': 'nope' } }),
		).rejects.toThrow('Rule keywords must not start with')
	})

	it('should reject keywords starting with #', async () => {
		await expect(
			expandStringToString('<!-- test -->', { rules: { '#bad': 'nope' } }),
		).rejects.toThrow('Rule keywords must not start with')
	})

	it('should reject keywords starting with *', async () => {
		await expect(
			expandStringToString('<!-- test -->', { rules: { '*bad': 'nope' } }),
		).rejects.toThrow('Rule keywords must not start with')
	})
})

describe('keyword case sensitivity', () => {
	it('should treat comment expansion keywords as case sensitive', async () => {
		const markdown = `<!-- KEYWORD -->\n<!-- kEyWoRd -->\n<!-- keyword -->\n`
		const options: Options = {
			rules: {
				// eslint-disable-next-line ts/naming-convention
				KEYWORD: "I'm yelling",
				kEyWoRd: "I'm emotional",
				keyword: "I'm basic",
			},
		}
		const expandedString = await expandStringToString(markdown, options)
		expect(expandedString).toMatchInlineSnapshot(`
			"<!-- KEYWORD -->

			I'm yelling

			<!-- /KEYWORD -->

			<!-- kEyWoRd -->

			I'm emotional

			<!-- /kEyWoRd -->

			<!-- keyword -->

			I'm basic

			<!-- /keyword -->
			"
		`)
	})
})

describe('compound rule handling', () => {
	it('should expand compound rules', async () => {
		const markdown = `<!-- compoundKeyword -->\n`
		const options: Options = {
			rules: {
				compoundKeyword: ['one', 'two', 'three'],
			},
		}
		const expandedString = await expandStringToString(markdown, options)
		expect(expandedString).toMatchInlineSnapshot(`
			"<!-- compoundKeyword -->

			one

			two

			three

			<!-- /compoundKeyword -->
			"
		`)
	})

	it('should pass option arrays to compound rules', async () => {
		const markdown = `<!-- compound [{option: 'yes'}, {option: 'it'}, {option: 'can'}] -->\n`
		const options: Options = {
			rules: {
				compound: [
					// eslint-disable-next-line ts/no-unsafe-type-assertion
					(options) => `My option is: ${(options as { option: string }).option}`,
					// eslint-disable-next-line ts/no-unsafe-type-assertion
					(options) => `My option is: ${(options as { option: string }).option}`,
					// eslint-disable-next-line ts/no-unsafe-type-assertion
					(options) => `My option is: ${(options as { option: string }).option}`,
				],
			},
		}
		const expandedString = await expandStringToString(markdown, options)
		expect(expandedString).toMatchInlineSnapshot(`
			"<!-- compound [{option: 'yes'}, {option: 'it'}, {option: 'can'}] -->

			My option is: yes

			My option is: it

			My option is: can

			<!-- /compound -->
			"
		`)
	})
})
