// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comment expansion > should expand comments 1`] = `
"# The MDAT sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Basic comment clean up

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

I was generated from test-rules.ts

<!-- /basic-dynamic -->

## List expansion

<!-- basic-list -->

* I
* am
* a
* list

<!-- /basic-list -->

## Expansions with options argument, canonical syntax

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Same expansion with different options

<!-- basic-options {prefix: "🌳 ", suffix: " 🌳"} -->

🌳 I am between two ferns 🌳

<!-- /basic-options -->

## Expansions with arguments, syntax forgiveness

<!--- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--rules ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MDAT will report the error.

<!-- basic-empty -->

<!-- /basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MDAT will report the error.

<!-- basic-throws -->

## Inline expansions with paragraph elements

This is a sentence with a "*<!-- basic-inline -->test-rules.ts<!-- /basic-inline -->*" inside of it.

## Multiple paragraphs

<!-- basic-multiple-paragraphs -->

I am a paragraph 1

I am a paragraph 2

I am a paragraph 3

<!-- /basic-multiple-paragraphs -->

## Multiple paragraphs blockquote

> <!-- basic-multiple-paragraphs -->
>
> I am a paragraph 1
>
> I am a paragraph 2
>
> I am a paragraph 3
>
> <!-- /basic-multiple-paragraphs -->

## Tags in code fence

Should not expand

\`\`\`html
<!-- basic -->
\`\`\`

## Stacked expansions

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

The following required an extra step to split html statements that were being interpreted as contiguous

## Adjacent inline expansions

A<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><b>Absolutely</b><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with options

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->🪴 I am between two ferns 🪴<!-- /basic-options --><!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->🪴 I am between two ferns 🪴<!-- /basic-options -->

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Expansion with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->
"
`;

exports[`comment expansion > should expand keywords while ignoring code-style comments 1`] = `
"# Comment Handling Test

<!-- // This is a developer note, should be ignored -->

## Section with hash comment

<!-- # TODO: Write better docs -->

Some content here.

<!-- #also-ignored -->

## Section with block comment

<!-- /* This is a block comment, should be ignored */ -->

## Keyword alongside code-style comments

<!-- // A note about the next keyword -->

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

<!-- # Another note -->

<!-- basic-dynamic -->

I was generated from test-rules.ts

<!-- /basic-dynamic -->
"
`;

exports[`comment expansion > should include a custom meta comment when provided as a string 1`] = `
"<!--+ This is a custom warning message. +-->

# The MDAT sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Basic comment clean up

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

I was generated from test-rules.ts

<!-- /basic-dynamic -->

## List expansion

<!-- basic-list -->

* I
* am
* a
* list

<!-- /basic-list -->

## Expansions with options argument, canonical syntax

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Same expansion with different options

<!-- basic-options {prefix: "🌳 ", suffix: " 🌳"} -->

🌳 I am between two ferns 🌳

<!-- /basic-options -->

## Expansions with arguments, syntax forgiveness

<!--- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--rules ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MDAT will report the error.

<!-- basic-empty -->

<!-- /basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MDAT will report the error.

<!-- basic-throws -->

## Inline expansions with paragraph elements

This is a sentence with a "*<!-- basic-inline -->test-rules.ts<!-- /basic-inline -->*" inside of it.

## Multiple paragraphs

<!-- basic-multiple-paragraphs -->

I am a paragraph 1

I am a paragraph 2

I am a paragraph 3

<!-- /basic-multiple-paragraphs -->

## Multiple paragraphs blockquote

> <!-- basic-multiple-paragraphs -->
>
> I am a paragraph 1
>
> I am a paragraph 2
>
> I am a paragraph 3
>
> <!-- /basic-multiple-paragraphs -->

## Tags in code fence

Should not expand

\`\`\`html
<!-- basic -->
\`\`\`

## Stacked expansions

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

The following required an extra step to split html statements that were being interpreted as contiguous

## Adjacent inline expansions

A<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><b>Absolutely</b><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with options

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->🪴 I am between two ferns 🪴<!-- /basic-options --><!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->🪴 I am between two ferns 🪴<!-- /basic-options -->

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Expansion with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->
"
`;

exports[`comment expansion > should include the meta tag if asked 1`] = `
"<!--+ Warning: Content inside HTML comment blocks was generated by mdat and may be overwritten. +-->

# The MDAT sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Basic comment clean up

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

I was generated from test-rules.ts

<!-- /basic-dynamic -->

## List expansion

<!-- basic-list -->

* I
* am
* a
* list

<!-- /basic-list -->

## Expansions with options argument, canonical syntax

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Same expansion with different options

<!-- basic-options {prefix: "🌳 ", suffix: " 🌳"} -->

🌳 I am between two ferns 🌳

<!-- /basic-options -->

## Expansions with arguments, syntax forgiveness

<!--- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--rules ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MDAT will report the error.

<!-- basic-empty -->

<!-- /basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MDAT will report the error.

<!-- basic-throws -->

## Inline expansions with paragraph elements

This is a sentence with a "*<!-- basic-inline -->test-rules.ts<!-- /basic-inline -->*" inside of it.

## Multiple paragraphs

<!-- basic-multiple-paragraphs -->

I am a paragraph 1

I am a paragraph 2

I am a paragraph 3

<!-- /basic-multiple-paragraphs -->

## Multiple paragraphs blockquote

> <!-- basic-multiple-paragraphs -->
>
> I am a paragraph 1
>
> I am a paragraph 2
>
> I am a paragraph 3
>
> <!-- /basic-multiple-paragraphs -->

## Tags in code fence

Should not expand

\`\`\`html
<!-- basic -->
\`\`\`

## Stacked expansions

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

The following required an extra step to split html statements that were being interpreted as contiguous

## Adjacent inline expansions

A<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><b>Absolutely</b><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with options

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->🪴 I am between two ferns 🪴<!-- /basic-options --><!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->🪴 I am between two ferns 🪴<!-- /basic-options -->

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Expansion with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->
"
`;

exports[`comment expansion > should use custom meta comment with different identifier 1`] = `
"<!--*** Custom meta identifier test ***-->

# The MDAT sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Basic comment clean up

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

I was generated from test-rules.ts

<!-- /basic-dynamic -->

## List expansion

<!-- basic-list -->

* I
* am
* a
* list

<!-- /basic-list -->

## Expansions with options argument, canonical syntax

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Same expansion with different options

<!-- basic-options {prefix: "🌳 ", suffix: " 🌳"} -->

🌳 I am between two ferns 🌳

<!-- /basic-options -->

## Expansions with arguments, syntax forgiveness

<!--- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--rules ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MDAT will report the error.

<!-- basic-empty -->

<!-- /basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MDAT will report the error.

<!-- basic-throws -->

## Inline expansions with paragraph elements

This is a sentence with a "*<!-- basic-inline -->test-rules.ts<!-- /basic-inline -->*" inside of it.

## Multiple paragraphs

<!-- basic-multiple-paragraphs -->

I am a paragraph 1

I am a paragraph 2

I am a paragraph 3

<!-- /basic-multiple-paragraphs -->

## Multiple paragraphs blockquote

> <!-- basic-multiple-paragraphs -->
>
> I am a paragraph 1
>
> I am a paragraph 2
>
> I am a paragraph 3
>
> <!-- /basic-multiple-paragraphs -->

## Tags in code fence

Should not expand

\`\`\`html
<!-- basic -->
\`\`\`

## Stacked expansions

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

The following required an extra step to split html statements that were being interpreted as contiguous

## Adjacent inline expansions

A<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><b>Absolutely</b><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with options

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->🪴 I am between two ferns 🪴<!-- /basic-options --><!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->🪴 I am between two ferns 🪴<!-- /basic-options -->

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Expansion with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->
"
`;
